Update Post Draft _config.yml by Qexo

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: 15School
 subtitle: '这里是输入15中的论坛'
 description: ''
 keywords:
-author: anther
+author: author
 language: zh-CN
 timezone: 'Asia/Shanghai'
 
