--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/stun"]
 	path = themes/stun
-	url = https://github.com/liuyib/hexo-theme-stun
+	url = https://github.com/rumian0/stun
